  Added another crafting recipe for the Light Block that uses Energy Crystals.
    - Because I'm sure I'm not the only one that keeps making 9 Energy Crystals
      only to realize you can't make a Light Block from them.
CHANGED:
  No longer registers a Bronze crafting recipe if Immersive Engineering or Mekanism is installed.
FIXED:
  Fixed Fusion Chamber not dropping when mined.
  Fixed Ores that drop an item not being affected by Pickaxes with the Fortune effect.
  Finally added the Job system. Now the Magic Infuser and Circuit Fabricator
    (machines with more than 1 input slot) will now show their Time Remaining correctly.
  More recipe advancement fixes.



v1.4 - July 26, 2021
INFO:
  Moved all materials to a new ADDSynth Materials mod.
   - This once again breaks your old worlds, and Forge will warn you of the missing items.
   - Hopefully this should be the last time, because I'm not planning on splitting off
      items into a new mod again.
   - This time I tried to use a DataFixer to seamlessly convert your world data to the new
      format, but the DataFixer stuff was much too complicated for me to figure it out
      without documentation, so I have to wait for someone to explain how it works before
      I can use it.
  The Overpowered mod was renamed to Overpowered Technology.
  Starting in version 1.5.x, the mod_id for Overpowered Technology will be renamed
    from overpowered to overpowered_technology.
  Starting in version 1.5.x, ADDSynthCore, ADDSynth Energy, and Overpowered Technology
    will be split apart into 3 separate files.
NEW:
  Added Silicon and Rose Quartz.
  Added more mods to detect:
    The One Probe, Hwyla, The Beneath, Cooking for Blockheads, Tiny Progressions,
    FoamFix, RFTools Utility, Draconic Evolution, Curios, Forestry,
    Immersive Engineering, Immersive Railroading, Track API, Sound Filters,
    Block Renderer, Item Zoom, Neat, and McJtyLib.
    - Updated Pam's Harvestcraft so we can detect it now.