@@ -10,6 +10,9 @@ NEW:
       only to realize you can't make a Light Block from them.
 CHANGED:
   No longer registers a Bronze crafting recipe if Immersive Engineering or Mekanism is installed.
+  Changed the Black Hole erase algorithm default speed from 50% of a tick to 20%.
+  The Black Hole no longer has a collision box, similar to the Null Block. This means you won't
+    be able to break the Black Hole to stop it from erasing the world.
 FIXED:
   Fixed Fusion Chamber not dropping when mined.
   Fixed Ores that drop an item not being affected by Pickaxes with the Fortune effect.
